--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,8 @@
     "eslint": "^8.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^28.8.3",
+    "jest": "^29.7.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "sinon": "^16.1.1"
