--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "@tensorflow/tfjs": "^4.21.0",
     "bcryptjs": "^2.4.3",
     "bull": "^3.16.0",
     "chai-http": "^4.3.0",
